--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,12 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.21.4
-
       - name: Build and Test
         run: go test -v ./...
-
   slackNotification:
     name: Slack Notification
     runs-on: ubuntu-latest
@@ -36,3 +33,19 @@ jobs:
           SLACK_TITLE: DSK TEST
           SLACK_USERNAME: KOLETO
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  publishBenchRes:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.21.4
+      - name: gobenchdata publish
+        run: go run go.bobheadxi.dev/gobenchdata@v1 action
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          INPUT_PRUNE_COUNT: 0
+          INPUT_PUBLISH: true
+          INPUT_PUBLISH_BRANCH: gh-pages
