--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -16,9 +15,12 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.21.4
+      - name: mongo-action
+        uses: DigiPie/mongo-action@v2.0.1
       - name: Build and Test
         run: go test -v ./...
   slackNotification:
+    needs: test
     name: Slack Notification
     runs-on: ubuntu-latest
     steps:
@@ -42,6 +44,8 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.21.4
+      - name: mongo-action
+        uses: DigiPie/mongo-action@v2.0.1
       - name: gobenchdata publish
         run: go run go.bobheadxi.dev/gobenchdata@v1 action
         env:
