--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,26 +35,49 @@ jobs:
           SLACK_TITLE: DSK TEST
           SLACK_USERNAME: KOLETO
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-  runBenchRes:
+#  runBenchRes:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: checkout
+#        uses: actions/checkout@v4
+#      - name: Set up Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.21.4
+#      - name: mongo-action
+#        uses: DigiPie/mongo-action@v2.0.1
+#      - name: gobenchdata publish
+#        run: go run go.bobheadxi.dev/gobenchdata@v1 action
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.NOT_GITHUB_PERSONAL_ACCESS_TOKEN }}
+#          INPUT_PRUNE_COUNT: 0
+#          INPUT_PUBLISH: true
+#          INPUT_PUBLISH_BRANCH: gh-pages
+#      - name: prepareToCry
+#        run: go install go.bobheadxi.dev/gobenchdata@latest
+#      - name: CryForHelp
+#        run: gobenchdata web generate ./app
+  benchmarkV2:
+    name: benchibench
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
         with:
           go-version: 1.21.4
       - name: mongo-action
         uses: DigiPie/mongo-action@v2.0.1
-      - name: gobenchdata publish
-        run: go run go.bobheadxi.dev/gobenchdata@v1 action
-        env:
-          GITHUB_TOKEN: ${{ secrets.NOT_GITHUB_PERSONAL_ACCESS_TOKEN }}
-          INPUT_PRUNE_COUNT: 0
-          INPUT_PUBLISH: true
-          INPUT_PUBLISH_BRANCH: gh-pages
-      - name: prepareToCry
-        run: go install go.bobheadxi.dev/gobenchdata@latest
-      - name: CryForHelp
-        run: gobenchdata web generate ./app
-
+      # Run benchmark with `go test -bench` and stores the output to a file
+      - name: Run benchmark
+        run: go test -bench ./... | tee output.txt
+      # gh-pages branch is updated and pushed automatically with extracted benchmark data
+      - name: Store benchmark result
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          name: My Project Go Benchmark
+          tool: 'go'
+          output-file-path: output.txt
+          # Access token to deploy GitHub Pages branch
+          github-token: ${{ secrets.NOT_GITHUB_PERSONAL_ACCESS_TOKEN }}
+          # Push and deploy GitHub pages branch automatically
+          auto-push: true
